--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
       password: 12345
       
   application:
-    name: currency-exchange
+    name: currency-exchange-service
 
 eureka:
   client:
